--- a/lib/testapp_web/templates/layout/app.html.eex
+++ b/lib/testapp_web/templates/layout/app.html.eex
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
-  <body>
-    <header>
-      <section class="container">
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/hoyerboard.png") %>" alt="Hoyerboard"/>
-        </a>
-      </section>
-    </header>
-    <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= @inner_content %>
-    </main>
+  <body class="bg-gray-900 bg-center bg-cover bg-fixed bg-no-repeat selection-teal-200" style="background-image: url(<%=Routes.static_path(@conn, "/images/bg.jpg") %>)">
+    <section class="relative bg-gray-900 min-h-screen text-gray-500 leading-relaxed max-w-3xl p-12 block">
+      <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-gray-900 transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <polygon points="50,0 100,0 50,100 0,100" />
+      </svg>
+      <header role='banner' class='flex items-center'>
+          <img class="h-12 w-auto" src="<%= Routes.static_path(@conn, "/images/medeed.png") %>" alt="Medeed"/>
+          <h1 class='text-white text-3xl'>Medeed</h1>
+      </header>
+      <main role="main">
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+        <%= @inner_content %>
+      </main>
+    </section>
   </body>
 </html>
