--- a/lib/testapp_web/templates/page/index.html.eex
+++ b/lib/testapp_web/templates/page/index.html.eex
@@ -1,18 +1,30 @@
-<div>
-  <h1 class='mt-5 text-4xl tracking-tight font-extrabold'>
+<div class="pt-5">
+  <div class="text-sm font-semibold uppercase tracking-wide text-gray-500 sm:text-base lg:text-sm xl:text-base">
+    Coming soon
+  </div>
+  <h1 class='text-white text-4xl tracking-tight font-extrabold'>
     Das Job Portal für
     <br class="xl:hidden" />
     <span class="text-teal-600">
     Medical Professionals
     </span>
   </h1>
-<p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-  Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
-</p>
-<div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
-  <div class="rounded-md shadow">
-    <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-teal-600 hover:bg-teal-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
-      Sign Up
-    </a>
+  <p class="mt-3 text-base text-gray-400 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+    Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
+  </p>
+  <div class="mt-5 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
+    <p class="text-base font-medium text-gray-400">
+      Sign up to get notified when it’s ready.
+    </p>
+    <form action="#" method="POST" class="mt-3 sm:flex">
+      <input aria-label="Email" class="appearance-none block w-full px-3 py-3 border border-gray-300 text-base leading-6 rounded-md placeholder-gray-500 shadow-sm focus:outline-none focus:placeholder-gray-400 focus:shadow-outline focus:border-blue-300 transition duration-150 ease-in-out sm:flex-1" placeholder="Enter your email" />
+      <button type="submit" class="mt-3 w-full px-6 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-teal-800 shadow-sm hover:bg-teal-700 focus:outline-none focus:shadow-outline active:bg-teal-900 transition duration-150 ease-in-out sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto">
+        Notify me
+      </button>
+    </form>
+    <p class="mt-3 text-sm leading-5 text-gray-500">
+      We care about the protection of your data. Read our
+      <a href="#" class="font-medium text-teal-600 underline">Privacy Policy</a>.
+    </p>
   </div>
 </div>
