--- a/lib/testapp_web/templates/page/index.html.eex
+++ b/lib/testapp_web/templates/page/index.html.eex
@@ -1,3 +1,6 @@
+<svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-gray-900 transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none">
+  <polygon points="50,0 100,0 50,100 0,100" />
+</svg>
 <div class="pt-5">
   <div class="text-sm font-semibold uppercase tracking-wide text-gray-500 sm:text-base lg:text-sm xl:text-base">
     Coming soon
@@ -24,7 +27,7 @@
     </form>
     <p class="mt-3 text-sm leading-5 text-gray-500">
       We care about the protection of your data. Read our
-      <a href="#" class="font-medium text-teal-600 underline">Privacy Policy</a>.
+      <%= link "Privacy Policy", to: Routes.page_path(@conn, :policy), class: "font-medium text-teal-600 underline" %>
     </p>
   </div>
 </div>
