Add jobs layout and sign up form

--- a/lib/testapp_web/templates/job/index.html.eex
+++ b/lib/testapp_web/templates/job/index.html.eex
@@ -1,3 +1,93 @@
-<h1>Listing Jobs</h1>
-<%= live_render(@conn, Testapp.JobsLive) %>
-<span><%= link "New Job", to: Routes.job_path(@conn, :new) %></span>
+<div>
+  <div class="bg-gray-800 pb-32">
+    <nav class="bg-gray-800">
+      <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+        <div class="border-b border-gray-700">
+          <div class="flex items-center justify-between h-16 px-4 sm:px-0">
+            <div class="flex items-center">
+              <div class="flex-shrink-0">
+                <a href="<%= Routes.page_path(@conn, :index)%>">
+                  <img class="h-12 w-auto" src="<%= Routes.static_path(@conn, "/images/medeed.png") %>" alt="Medeed"/>
+                </a>
+              </div>
+              <div class="hidden md:block">
+                <div class="ml-10 flex items-baseline">
+                  <a href="#" class="px-3 py-2 rounded-md text-sm font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700">Jobs</a>
+                  <a href="#" class="ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700">Team</a>
+                </div>
+              </div>
+            </div>
+            <div class="-mr-2 flex md:hidden">
+              <!-- Mobile menu button -->
+              <button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white">
+                <!-- Menu open: "hidden", Menu closed: "block" -->
+                <svg class="block h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+                <!-- Menu open: "block", Menu closed: "hidden" -->
+                <svg class="hidden h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--
+        Mobile menu, toggle classes based on menu state.
+
+        Open: "block", closed: "hidden"
+      -->
+      <div class="hidden border-b border-gray-700 md:hidden">
+        <div class="px-2 py-3 sm:px-3">
+          <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700">Jobs</a>
+          <a href="#" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700">Team</a>
+        </div>
+      </div>
+    </nav>
+    <header class="py-10">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h1 class="text-3xl text-center leading-9 font-bold text-white">
+          Jobs
+        </h1>
+      </div>
+    </header>
+  </div>
+
+  <main class="-mt-32">
+    <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
+      <!-- Replace with your content -->
+      <%= live_render(@conn, Testapp.JobsLive) %>
+      <!-- /End replace -->
+      <div class="max-w-screen-lg mx-auto py-8">
+        <div class="px-6 py-6 bg-teal-700 rounded-lg md:py-8 md:px-8 xl:flex xl:items-center">
+          <div class="xl:w-0 xl:flex-1">
+            <h2 class="text-2xl leading-8 font-extrabold tracking-tight text-white sm:text-3xl sm:leading-9">
+              Want products news and updates?
+            </h2>
+            <p class="mt-3 max-w-3xl text-lg leading-6 text-teal-200">
+              Sign up for our newsletter to stay up to date.
+            </p>
+          </div>
+          <div class="mt-8 sm:w-full sm:max-w-md xl:mt-0 xl:ml-8">
+            <form class="sm:flex">
+              <input aria-label="Email address" type="email" required class="appearance-none w-full px-5 py-3 border border-transparent text-base leading-6 rounded-md text-gray-900 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 transition duration-150 ease-in-out" placeholder="Enter your email" />
+              <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3 sm:flex-shrink-0">
+                <button class="w-full flex items-center justify-center px-5 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-teal-500 hover:bg-teal-400 focus:outline-none focus:bg-teal-400 transition duration-150 ease-in-out">
+                  Notify me
+                </button>
+              </div>
+            </form>
+            <p class="mt-3 text-sm leading-5 text-teal-200">
+              We care about the protection of your data. Read our
+              <a href="#" class="text-white font-medium underline">
+                Privacy Policy.
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+</div>
