--- a/lib/testapp_web/templates/page/index.html.eex
+++ b/lib/testapp_web/templates/page/index.html.eex
@@ -6,28 +6,34 @@
     Coming soon
   </div>
   <h1 class='text-white text-4xl tracking-tight font-extrabold'>
-    Das Job Portal für
+    Das Job-Netzwerk für
     <br class="xl:hidden" />
     <span class="text-teal-600">
     Medical Professionals
     </span>
   </h1>
   <p class="mt-3 text-base text-gray-400 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-    Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
+    Willkommen bei Medeed.
+    <br/>
+    Hier ensteht das modernste Job-Netzwerk für den medizinischen Bereich.
+    <br/>
+    Melde dich jetzt an und sei von Anfang an dabei!
+    <br/>
+    Schon bald wirst du kostenlos exklusiven Zugriff auf attraktive Stellenangebote und Karrierechancen der medizinischen Branche haben.
   </p>
   <div class="mt-5 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
     <p class="text-base font-medium text-gray-400">
-      Sign up to get notified when it’s ready.
+      Jetzt anmelden und über neue Angebote aus unseren Netzwerk informiert werden
     </p>
     <form action="#" method="POST" class="mt-3 sm:flex">
-      <input aria-label="Email" class="appearance-none block w-full px-3 py-3 border border-gray-300 text-base leading-6 rounded-md placeholder-gray-500 shadow-sm focus:outline-none focus:placeholder-gray-400 focus:shadow-outline focus:border-blue-300 transition duration-150 ease-in-out sm:flex-1" placeholder="Enter your email" />
+      <input aria-label="Email" class="appearance-none block w-full px-3 py-3 border border-gray-300 text-base leading-6 rounded-md placeholder-gray-500 shadow-sm focus:outline-none focus:placeholder-gray-400 focus:shadow-outline focus:border-blue-300 transition duration-150 ease-in-out sm:flex-1" placeholder="Deine E-Mail" />
       <button type="submit" class="mt-3 w-full px-6 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-teal-800 shadow-sm hover:bg-teal-700 focus:outline-none focus:shadow-outline active:bg-teal-900 transition duration-150 ease-in-out sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto">
-        Notify me
+        Anmelden
       </button>
     </form>
     <p class="mt-3 text-sm leading-5 text-gray-500">
-      We care about the protection of your data. Read our
-      <%= link "Privacy Policy", to: Routes.page_path(@conn, :policy), class: "font-medium text-teal-600 underline" %>
+      Der Schutz deiner Daten ist uns wichtig. Lies hier unsere
+      <%= link "Datenschutzregelung", to: Routes.page_path(@conn, :policy), class: "font-medium text-teal-600 underline" %>
     </p>
   </div>
 </div>
