--- a/lib/testapp_web/templates/layout/jobs.html.eex
+++ b/lib/testapp_web/templates/layout/jobs.html.eex
@@ -11,7 +11,7 @@
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <main role="main">
+    <main role="main" class="bg-gray-200 min-h-screen">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= @inner_content %>
