--- a/lib/testapp_web/templates/page/index.html.eex
+++ b/lib/testapp_web/templates/page/index.html.eex
@@ -25,12 +25,19 @@
     <p class="text-base font-medium text-gray-400">
       Jetzt anmelden und über neue Angebote aus unseren Netzwerk informiert werden
     </p>
-    <form action="#" method="POST" class="mt-3 sm:flex">
-      <input aria-label="Email" class="appearance-none block w-full px-3 py-3 border border-gray-300 text-base leading-6 rounded-md placeholder-gray-500 shadow-sm focus:outline-none focus:placeholder-gray-400 focus:shadow-outline focus:border-blue-300 transition duration-150 ease-in-out sm:flex-1" placeholder="Deine E-Mail" />
-      <button type="submit" class="mt-3 w-full px-6 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-teal-800 shadow-sm hover:bg-teal-700 focus:outline-none focus:shadow-outline active:bg-teal-900 transition duration-150 ease-in-out sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto">
-        Anmelden
-      </button>
-    </form>
+    <%= form_for @changeset, Routes.user_path(@conn, :create), [class: "mt-3 sm:flex"], fn f -> %>
+      <%= if @changeset.action do %>
+        <div class="alert alert-danger">
+          <p>
+            Sie konnten nicht angemeldet werden
+          </p>
+        </div>
+      <% end %>
+        <%= text_input f, :email, [placeholder: "Deine E-Mail", class: "appearance-none block w-full px-3 py-3 border border-gray-300 text-base leading-6 rounded-md placeholder-gray-500 shadow-sm focus:outline-none focus:placeholder-gray-400 focus:shadow-outline focus:border-blue-300 transition duration-150 ease-in-out sm:flex-1"] %>
+      <div>
+        <%= submit "Anmelden", [class: "mt-3 w-full px-6 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-teal-800 shadow-sm hover:bg-teal-700 focus:outline-none focus:shadow-outline active:bg-teal-900 transition duration-150 ease-in-out sm:mt-0 sm:ml-3 sm:flex-shrink-0 sm:inline-flex sm:items-center sm:w-auto"] %>
+      </div>
+    <% end %>
     <p class="mt-3 text-sm leading-5 text-gray-500">
       Der Schutz deiner Daten ist uns wichtig. Lies hier unsere
       <%= link "Datenschutzregelung", to: Routes.page_path(@conn, :policy), class: "font-medium text-teal-600 underline" %>
