Add filter live view for jobs

--- a/lib/testapp_web/templates/job/form.html.eex
+++ b/lib/testapp_web/templates/job/form.html.eex
@@ -13,6 +13,9 @@
   <%= text_input f, :description %>
   <%= error_tag f, :description %>
 
+  <%= label f, :job_type %>
+  <%= text_input f, :job_type %>
+  <%= error_tag f, :job_type %>
   <div>
     <%= submit "Save" %>
   </div>
