--- a/lib/testapp_web/templates/job/jobs.html.leex
+++ b/lib/testapp_web/templates/job/jobs.html.leex
@@ -11,7 +11,7 @@
           </h3>
           <div class="inline-flex flex-wrap">
             <%= for type <- ["Full-time", "Part-time", "Freelance"] do %>
-              <button class="bg-gray-300 hover:text-opacity-100 text-opacity-50 hover:bg-gray-400 text-gray-600 mr-3 mb-2 py-2 px-3 text-sm rounded-sm tracking-wide">
+              <button phx-click="filter" phx-value-type="<%= type %>" class="bg-gray-300 hover:text-opacity-100 text-opacity-50 hover:bg-gray-400 text-gray-600 mr-3 mb-2 py-2 px-3 text-sm rounded-sm tracking-wide">
                 <%= type %>
               </button>
             <% end %>
@@ -56,7 +56,7 @@
                     <svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
                       <path d="M9 6a3 3 0 11-6 0 3 3 0 016 0zM17 6a3 3 0 11-6 0 3 3 0 016 0zM12.93 17c.046-.327.07-.66.07-1a6.97 6.97 0 00-1.5-4.33A5 5 0 0119 16v1h-6.07zM6 11a5 5 0 015 5v1H1v-1a5 5 0 015-5z"/>
                     </svg>
-                    Engineering
+                    <%= job.job_type %>
                   </div>
                   <div class="mt-2 flex items-center text-sm leading-5 text-gray-500 sm:mt-0">
                     <svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
